# PhoenixEngine

./: .gitignore  .travis.yml  CMakeLists.txt  PhoenixEngine.sln  README.md  index.html  params.json
CMake/: BuildDebug.x32.bat  BuildDebug.x64.bat  BuildRelease.x32.bat  BuildRelease.x64.bat  EngineConfig.h.in
Phils Scrap Folder/: README.txt
PhoenixEngine/: PhoenixEngine.vcxproj  PhoenixEngine.vcxproj.filters
RohunProposedStructure/PhoenixEngine/PhoenixEngine/: FEngine.cpp  FEngine.h  FGame.cpp  FGame.h  FMemory.h  PEngine.cpp  PEngine.h  PGame.cpp  PGame.h  PhoenixEngine.vcxproj  PhoenixEngine.vcxproj.filters
RohunProposedStructure/PhoenixEngine/TestGame/: FTestGame.cpp  FTestGame.h  Main.cpp  PTestGame.cpp  PTestGame.h  TestGame.vcxproj  TestGame.vcxproj.filters
Solution/: FORCE_BUILD.vcxproj  FORCE_BUILD.vcxproj.filters  Makefile  PhoenixEngine.sln  Premake.lua  Premake_CopyAssets.lua  Premake_Copyx32DLL.lua
Solution/Binaries/Debug/: PhoenixEngine.idb  PhoenixEngine.lib  TestGame.idb  TestGame.ilk
Solution/Binaries/Release/: PhoenixEngine.lib
Solution/Game/: Main.cpp
Solution/Game/Game.xcodeproj/: project.pbxproj
Solution/Libraries/: ReadMe.txt
Solution/PhoenixEngine/: Makefile  PhoenixEngine.vcxproj  PhoenixEngine.vcxproj.filters  PhoenixMain.cpp
Solution/PhoenixEngine.xcworkspace/: contents.xcworkspacedata
Solution/PhoenixEngine.xcworkspace/xcuserdata/rastaninja77.xcuserdatad/: UserInterfaceState.xcuserstate
Solution/PhoenixEngine/PhoenixEngine.xcodeproj/: project.pbxproj
Solution/PhoenixEngine/Source/Audio/: AudioEngine.cpp  AudioEngine.h  AudioListener.cpp  Sound.cpp
Solution/PhoenixEngine/Source/Components/: Component.cpp  Component.h  ComponentFilter.cpp  ComponentStorage.cpp  Core.cpp  Core.h  Transform.cpp  Transform.h
Solution/PhoenixEngine/Source/Core/: Engine.cpp  Engine.h  FEngine.h  GameScene.cpp  GameScene.h  GameThread.cpp  GameThread.h
Solution/PhoenixEngine/Source/ExternalLib/: BulletIncludes.h  FBXIncludes.h  GLEWIncludes.h  GLFWIncludes.h  LibIncludes.h
Solution/PhoenixEngine/Source/Game/: Game.cpp  Game.h
Solution/PhoenixEngine/Source/GameObject/: GameObject.cpp  GameObjectIdPool.cpp
Solution/PhoenixEngine/Source/Input/: Input.cpp  Input.h  InputAction.h  KeyCode.h  KeyModifier.h  KeyboardEvent.h  MouseButton.h  MouseClickEvent.h
Solution/PhoenixEngine/Source/Math/: Math.h  MathCommon.h  MatrixTransform.h  Vector.h  Vector2D.h  Vector3D.h
Solution/PhoenixEngine/Source/Rendering/: Camera.cpp  Camera.h  GFXEngine.cpp  GFXEngine.h  GLIncludes.h  GLInterface.h  Image.cpp  Image.h  ImageData.h  ImageProcessor.cpp  ImageProcessor.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.h  Model.cpp  Model.h  ModelData.h  ModelProcessor.cpp  ModelProcessor.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Uniforms.h
Solution/PhoenixEngine/Source/Utility/: Array.h  Assert.h  BitVector.h  ConsoleColor.h  Debug.h  (+16 more)
Solution/TestGame/: FTestGame.h  Main.cpp  Makefile  TestGame.cpp  TestGame.h  TestGame.vcxproj  TestGame.vcxproj.filters
Solution/TestGame/TestGame.xcodeproj/: project.pbxproj
Tools/: BuildRelease.x32.bat  BuildRelease.x64.bat  MacInstallBrewDeps.command  Make.x32.bat  Make.x64.bat  PremakeAllVS2015x32.bat  PremakeMac.command  PremakeMakefile.bat  PremakeVS2015.bat
(+93 files in other folders)
